objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Age_of_Student__c</fullName>
        <formula>IF(! ISBLANK(  Birthdate__c ) , FLOOR( (TODAY() -  Birthdate__c )/365.2425) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age of Student</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alumni__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is parent part of Alumni?</inlineHelpText>
        <label>Alumni</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Provided__c</fullName>
        <inlineHelpText>Has application been provided based on Lead Stage?</inlineHelpText>
        <label>Application Provided</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Child_s_name__c</fullName>
        <description>Enter in the child or childrens names - this is for REFERENCE only - this is not the student record when application is received - that is entered as a child contact under family</description>
        <inlineHelpText>Enter in the child or childrens names - this is for REFERENCE only - this is not the student record when application is received - that is entered as a child contact under family</inlineHelpText>
        <label>Child&apos;s name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Christian__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Christian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Church_Affiliation__c</fullName>
        <label>Church Affiliation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creche_no__c</fullName>
        <description>Number of children and names in creche</description>
        <inlineHelpText>Number of children and names in creche</inlineHelpText>
        <label>Creche no</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <label>Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Application__c</fullName>
        <description>Date Application for Enrolment received</description>
        <label>Date of Application</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Enquiry__c</fullName>
        <label>Date of Enquiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Enrolment__c</fullName>
        <description>Date Offer of  Enrolment Accepted</description>
        <label>Date of Enrolment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EXPLORE_YEAR_7_GROUP__c</fullName>
        <description>Group for Explore Year 7 based on YoE</description>
        <label>EXPLORE YEAR 7 GROUP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrolment_Period__c</fullName>
        <label>Enrolment Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 1 Year</fullName>
                </value>
                <value>
                    <fullName>1 Year to 3 Years</fullName>
                </value>
                <value>
                    <fullName>More than 3 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grade_Range__c</fullName>
        <description>It gets auto-updated based on year group</description>
        <label>Grade Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-6</fullName>
                </value>
                <value>
                    <fullName>7-9</fullName>
                </value>
                <value>
                    <fullName>10-12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Colleagues, friends, family</fullName>
                </value>
                <value>
                    <fullName>Students, former students</fullName>
                </value>
                <value>
                    <fullName>Work in the city</fullName>
                </value>
                <value>
                    <fullName>SACS website, facebook, twitter</fullName>
                </value>
                <value>
                    <fullName>Advertisement</fullName>
                </value>
                <value>
                    <fullName>School Choice Expo</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Alumni__c</fullName>
        <inlineHelpText>If an ex-student of St Andrew’s, final Year and Year group</inlineHelpText>
        <label>If Alumni</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Rating__c</fullName>
        <formula>IMAGE(IF( ISPICKVAL( Rating , &quot;Very Hot&quot;) , &quot;/img/samples/flag_red.gif&quot;, IF( ISPICKVAL( Rating , &quot;Hot&quot;) , &quot;/img/samples/flag_red.gif&quot;, IF(ISPICKVAL( Rating , &quot;Warm&quot;) , &quot;/img/samples/flag_yellow.gif&quot;, &quot;/img/samples/flag_green.gif&quot;))) , &quot;Lead Rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score_1__c</fullName>
        <label>Lead Score 1</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score_2__c</fullName>
        <label>Lead Score 2</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score_3__c</fullName>
        <label>Lead Score 3</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Stage__c</fullName>
        <inlineHelpText>The current status based on request.</inlineHelpText>
        <label>Lead Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>School Tour Requested</fullName>
                </value>
                <value>
                    <fullName>Enquiry</fullName>
                </value>
                <value>
                    <fullName>Meeting with Registrar</fullName>
                </value>
                <value>
                    <fullName>Application Received</fullName>
                </value>
                <value>
                    <fullName>Offered</fullName>
                </value>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>Current Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Sub_Source__c</fullName>
        <inlineHelpText>Based on Web and Marketing Efforts &amp; Campaigns</inlineHelpText>
        <label>Lead Sub Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>School Tour</fullName>
                </value>
                <value>
                    <fullName>Quick Enquiry</fullName>
                    <default>true</default>
                    <label>Quick Enquiry</label>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Mass Email</fullName>
                </value>
                <value>
                    <fullName>Pre-School Visits</fullName>
                </value>
                <value>
                    <fullName>Expos</fullName>
                </value>
                <value>
                    <fullName>Concerts</fullName>
                </value>
                <value>
                    <fullName>Word of Mouth</fullName>
                </value>
                <value>
                    <fullName>Going to Sites_Visits</fullName>
                </value>
                <value>
                    <fullName>Kinder event</fullName>
                </value>
                <value>
                    <fullName>events@sacs email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Near By</fullName>
                </value>
                <value>
                    <fullName>Accessible</fullName>
                </value>
                <value>
                    <fullName>Far</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_People_Attending__c</fullName>
        <label>No. of People Attending</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_School_Age_Children__c</fullName>
        <description>Enter number of school age children that the pre school has for the upcoming school year</description>
        <label>No of School Age Children</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Overseas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Overseas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Sub_Source__c</fullName>
        <label>Opportunity Sub Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>School Tour</fullName>
                </value>
                <value>
                    <fullName>Quick Enquiry</fullName>
                </value>
                <value>
                    <fullName>Going to Sites</fullName>
                </value>
                <value>
                    <fullName>Mass Email</fullName>
                </value>
                <value>
                    <fullName>Concerts</fullName>
                </value>
                <value>
                    <fullName>Expos</fullName>
                </value>
                <value>
                    <fullName>Visits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Tour_Attendee_Name__c</fullName>
        <description>Enter in any other names of attendees coming along to a tour</description>
        <label>Other Tour Attendee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overseas__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is he/she an overseas student?</inlineHelpText>
        <label>Overseas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Business__c</fullName>
        <label>Phone (Business)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Range_Ranking__c</fullName>
        <label>Postal Range Ranking</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postal_Range__c</fullName>
        <label>Postal Range</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Ranking__c</fullName>
        <label>Postcode Ranking</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Within 10 Kms</fullName>
                </value>
                <value>
                    <fullName>11-15 Kms</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Southern</fullName>
                </value>
                <value>
                    <fullName>Outer suburban</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_School_Directions__c</fullName>
        <description>Enter specific pre school location or corporate clients</description>
        <label>Pre-School Directions</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Schools_No_of_Referrals__c</fullName>
        <description>Add in number of any applications received from the pre-school</description>
        <label>Pre-Schools No. of Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <description>For name of person who made referral</description>
        <inlineHelpText>Name of person who made referral</inlineHelpText>
        <label>Referred By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_Student_Name_and_Grade__c</fullName>
        <description>enter details of any students referred</description>
        <label>Referred Student Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Religion__c</fullName>
        <label>Religion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anglican</fullName>
                </value>
                <value>
                    <fullName>Christian</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Level__c</fullName>
        <inlineHelpText>Enter the school level in which student seeks to have admission.</inlineHelpText>
        <label>School Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Junior School</fullName>
                </value>
                <value>
                    <fullName>Middle School</fullName>
                </value>
                <value>
                    <fullName>Senior College</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Tour_Date__c</fullName>
        <label>School Tour Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tuesday 19 February, 2019</fullName>
                </value>
                <value>
                    <fullName>Tuesday 5 March, 2019</fullName>
                </value>
                <value>
                    <fullName>Gifted &amp; Talented Evening, 8 May 2019</fullName>
                </value>
                <value>
                    <fullName>Explore Year 7, 28 May 2019</fullName>
                </value>
                <value>
                    <fullName>IB Information Evening, 18 June 2019</fullName>
                </value>
                <value>
                    <fullName>ZZZ__ Tuesday 16 October, 2012, 09:00AM (All (K-12))</fullName>
                </value>
                <value>
                    <fullName>Wednesday, 2 April 2013 09:00AM (All (K-12))</fullName>
                </value>
                <value>
                    <fullName>Tuesday, 19 Feb 2013, 09:00 AM (All(K-12))</fullName>
                </value>
                <value>
                    <fullName>Tuesday, 05 March 2013, 09:00 AM (All(K-12))</fullName>
                </value>
                <value>
                    <fullName>19 March 2013</fullName>
                </value>
                <value>
                    <fullName>Twilight Tour Wednesday 3 April 2013</fullName>
                </value>
                <value>
                    <fullName>Tuesday 7 May, 2013, 09:00AM (All (K-12))</fullName>
                </value>
                <value>
                    <fullName>Tuesday 21 May 2013</fullName>
                </value>
                <value>
                    <fullName>Tuesday 28 May 2013</fullName>
                </value>
                <value>
                    <fullName>Tuesday 4 June 2013</fullName>
                </value>
                <value>
                    <fullName>Tuesday 18 June 2013</fullName>
                </value>
                <value>
                    <fullName>IB Open Evening, Tuesday 11 June</fullName>
                </value>
                <value>
                    <fullName>Year 7 Information Evening Wednesday 28 May</fullName>
                </value>
                <value>
                    <fullName>Tuesday 23 July 2013</fullName>
                </value>
                <value>
                    <fullName>School Readiness Talk Wednesday 31 July, 2013</fullName>
                </value>
                <value>
                    <fullName>Tuesday 6 August 2013</fullName>
                </value>
                <value>
                    <fullName>Tuesday 20 August 2013</fullName>
                </value>
                <value>
                    <fullName>Gifted &amp; Talented Information Evening, Wednesday 21 August</fullName>
                </value>
                <value>
                    <fullName>Tuesday 27 August 2013</fullName>
                </value>
                <value>
                    <fullName>Tuesday 3 September 2013</fullName>
                </value>
                <value>
                    <fullName>Senior College Tour, Tuesday 10 September 2013</fullName>
                </value>
                <value>
                    <fullName>K Open Morning Wednesday 11 September</fullName>
                </value>
                <value>
                    <fullName>Chorister Auditions Saturday 14 September, 2013</fullName>
                </value>
                <value>
                    <fullName>Tuesday 17 September 2013</fullName>
                </value>
                <value>
                    <fullName>Tuesday 15 October 2013</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Interests_Needs_Comments__c</fullName>
        <label>Special Interests/Needs/Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Lead_Score__c</fullName>
        <label>Total Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Leadscore__c</fullName>
        <description>It will take the values from all other Lead Scores &amp; add them to give a final value. Based on this value, it will change the Lead Rating (flag)</description>
        <formula>VALUE(Lead_Score_1__c) +  VALUE(Lead_Score_2__c) +  VALUE(Lead_Score_3__c) +  VALUE(Lead_Score_4__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Leadscore</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tour_Date__c</fullName>
        <label>Tour Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Group__c</fullName>
        <label>Year Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_of_Entry__c</fullName>
        <label>Year of Entry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2031</fullName>
                </value>
                <value>
                    <fullName>2032</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Enquiries</fullName>
        <columns>FULL_NAME</columns>
        <columns>Year_Group__c</columns>
        <columns>Year_of_Entry__c</columns>
        <columns>Lead_Sub_Source__c</columns>
        <columns>School_Tour_Date__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Notes__c</columns>
        <columns>Special_Interests_Needs_Comments__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Lead_Stage__c</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open,Responded,Ongoing,Converted,Booked on Tour,Confirmed on Tour</value>
        </filters>
        <label>All Enquiries</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Enquiries</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>School_Tour_Date__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Year_Group__c</columns>
        <columns>Year_of_Entry__c</columns>
        <columns>Special_Interests_Needs_Comments__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open Enquiries</label>
    </listViews>
    <listViews>
        <fullName>Enquiries_last_7_days</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Year_Group__c</columns>
        <columns>Year_of_Entry__c</columns>
        <columns>School_Tour_Date__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Special_Interests_Needs_Comments__c</columns>
        <columns>Lead_Sub_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Enquiries last 7 days</label>
    </listViews>
    <listViews>
        <fullName>Explore_Yr_7_2018</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Lead_Stage__c</columns>
        <columns>CAMPAIGN_MEMBER.STATUS</columns>
        <columns>Year_Group__c</columns>
        <columns>Year_of_Entry__c</columns>
        <columns>EXPLORE_YEAR_7_GROUP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Stage__c</field>
            <operation>equals</operation>
            <value>School Tour Requested,Enquiry</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open,Responded,Ongoing</value>
        </filters>
        <label>Explore Yr 7 2018</label>
    </listViews>
    <listViews>
        <fullName>Historical_enquiries</fullName>
        <columns>FULL_NAME</columns>
        <columns>Year_Group__c</columns>
        <columns>Year_of_Entry__c</columns>
        <columns>Lead_Sub_Source__c</columns>
        <columns>School_Tour_Date__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Notes__c</columns>
        <columns>Special_Interests_Needs_Comments__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Historical</value>
        </filters>
        <filters>
            <field>Lead_Stage__c</field>
            <operation>equals</operation>
            <value>Enrolled</value>
        </filters>
        <label>Historical enquiries (incl enrolled)</label>
    </listViews>
    <listViews>
        <fullName>Mass_email_tour_enquiries</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>School_Tour_Date__c</columns>
        <columns>Year_Group__c</columns>
        <columns>Year_of_Entry__c</columns>
        <columns>Special_Interests_Needs_Comments__c</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Mass email tour enquiries</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>Year_Group__c</columns>
        <columns>Year_of_Entry__c</columns>
        <columns>Lead_Sub_Source__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Special_Interests_Needs_Comments__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Enquiries</label>
    </listViews>
    <listViews>
        <fullName>Quick_Enquiries</fullName>
        <columns>FULL_NAME</columns>
        <columns>Date_of_Enquiry__c</columns>
        <columns>Special_Interests_Needs_Comments__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Notes__c</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Year_Group__c</columns>
        <columns>Year_of_Entry__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Sub_Source__c</field>
            <operation>equals</operation>
            <value>Quick Enquiry</value>
        </filters>
        <label>Quick Enquiries</label>
    </listViews>
    <listViews>
        <fullName>School_Tour_Bookings</fullName>
        <columns>FULL_NAME</columns>
        <columns>School_Tour_Date__c</columns>
        <columns>Special_Interests_Needs_Comments__c</columns>
        <columns>Year_Group__c</columns>
        <columns>Year_of_Entry__c</columns>
        <columns>Date_of_Enquiry__c</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Sub_Source__c</field>
            <operation>equals</operation>
            <value>School Tour</value>
        </filters>
        <label>School Tour Bookings</label>
    </listViews>
    <listViews>
        <fullName>hos_follow_up_emails</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Year_Group__c</columns>
        <columns>Year_of_Entry__c</columns>
        <columns>Special_Interests_Needs_Comments__c</columns>
        <columns>CAMPAIGN_MEMBER.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>hos follow up emails</label>
    </listViews>
</CustomObject>